# Indie-Studio

./: .gitignore  CMakeLists.txt  README.md  error_compil  linux_build.sh  to_thibeaut_le_bg.txt  windows_build.bat
assets/weapons/Glock18/: Glock18.mtl
encapsulation/: compil.sh  include.hpp  test.cpp
encapsulation/Gamepad/: gamepad.hpp
encapsulation/Sound/: text.hpp
encapsulation/include/: Camera.hpp  Gamepad.hpp  Model.hpp  Text.hpp  include.hpp  map_creation.hpp  sound.hpp  texture.hpp  window.hpp
encapsulation/include/Camera/: Camera.cpp
encapsulation/src/: Gamepad.cpp  Model.cpp  Text.cpp  Window.cpp
include/: Ai.hpp  Button.hpp  EntityObjects.hpp  EnvironnementBlocs.hpp  Game.hpp  GameObjects.hpp  GamePhase.hpp  GamePlay.hpp  IGamePhase.hpp  InputButton.hpp  Lobby.hpp  Map.hpp  Map3D.hpp  Menu.hpp  Player.hpp  misc.hpp
include/Encapsulation/: Camera.hpp  Model.hpp  MyRayMath.hpp  Sound.hpp  Text.hpp  Window.hpp  include.hpp
include/GameInterface/: Button.hpp  InputButton.hpp
include/GameObject/: Ai.hpp  BlockObject.hpp  EntityObjects.hpp  GameObject.hpp  IGameObject.hpp  Item.hpp  Player.hpp  PowerUp.hpp  Weapon.hpp
include/GamePhase/: End.hpp  GamePhase.hpp  GamePlay.hpp  Lobby.hpp  Menu.hpp  Play.hpp  Setting.hpp
include/Server/: Client.hpp  Message.hpp  Server.hpp
include/encapsulation/include/: gamepad.hpp  model.hpp
src/: Button.cpp  EntityObjects.cpp  Game.cpp  GameObject.cpp  GamePlay.cpp  InputButton.cpp  Lobby.cpp  Map.cpp  Map3D.cpp  Menu.cpp  Message.cpp  main.cpp
src/Encapsulation/: Camera.cpp  Gamepad.cpp  Model.cpp  Sound.cpp  Text.cpp  Window.cpp
src/GameInterface/: Button.cpp  InputButton.cpp
src/GameObject/: Ai.cpp  EntityObjects.cpp  GameObject.cpp  Item.cpp  Player.cpp  Weapon.cpp
src/GamePhase/: End.cpp  Game.cpp  GamePlay.cpp  GamePlayAlive.cpp  Lobby.cpp  Menu.cpp  Pause.cpp  Play.cpp  Setting.cpp
src/Server/: Client.cpp  Message.cpp  Server.cpp
tmp/: Message.hpp  chat_client.cpp  chat_server.cpp
tmp/server/: Client.cpp  Server.cpp
